# layers

./: .gitignore  Cargo.toml  Dockerfile.example  README.md  index.html  package.json  pnpm-lock.yaml  project.md  vite.config.ts
app/: StyledRoot.tsx  layout.tsx  page.tsx  theme.ts
assets/: theme.css
src/: App.tsx  docker.rs  dockerfile.rs  dockerfile_editor.rs  index.css  main.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: Dockerfile.example
src-tauri/src/: lib.rs  main.rs
src/components/: CollapsibleSidebar.tsx  ComparisonView.tsx  DockerLayersSidebar.tsx  DockerfileEditor.tsx  FileViewer.tsx  Header.tsx  LayerFiles.tsx  LayerInspector.tsx  MainContent.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TreeView.tsx
src/components/ui/: progress.tsx  sidebar.tsx  sonner.tsx
src/hooks/: useWindowSize.ts
src/store/: useLayersStore.ts
src/utils/: types.ts
