[package]
name = "layers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "main" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
notify-debouncer-mini = "0.4"
dirs = "5.0"
futures = "0.3"
