[package]
name = "layers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "main" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
notify-debouncer-mini = "0.4"
dirs = "5.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
walkdir = "2.4"
diff = "0.1"
scopeguard = "1.2"
syntect = "5.0"
regex = "1.9"
